@@ -126,6 +126,7 @@ x2goclient (4.0.3.2-0x2go1) unstable; urgency=medium
       entries in x2goclient.pro in x2goclientconfig.pri.
     - Move resource files to src/res/ and reference in x2goclient.pro.
     - Reference changes in shipped Makefile.
+    - Rename SRC_DIR to TOP_DIR in shipped Makefile.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 12:49:22 +0100
 
